# Valorant_Agent_Predictor

./: ENHANCED_FEATURES.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/interim/: player_game_data.csv  player_game_data_cleaned.csv
data/processed/: player_game_data_cleaned.csv  player_game_data_features.csv  player_game_data_features_smoothed.csv
data/processed/test/: test.csv
data/processed/train/: train.csv
docs/: 0_buisness_understanding.md  1_data_understanding.md  2_data_preparation.md  3_modelling_and_evaluation.md
models/: agent_recommender_model.pkl  encoders.pkl  feature_columns.pkl  valorant_performance_predictor.joblib  valorant_performance_predictor_encoders.joblib  valorant_performance_predictor_meta.json
notebooks/: 1_data_understanding.ipynb  2_data_preparation.ipynb  3_modelling_and_evaluation.ipynb  3_modelling_phase.ipynb  ValorantAgentPredictor.ipynb  abc.ipynb  week33_exercises_short.ipynb
notebooks/.ipynb_checkpoints/: 3_modelling_and_evaluation-checkpoint.ipynb
src/data/: data_loader.py
src/data/messy/: mess_my_data.py
src/utils/: anomalies.py  data_prep.py  data_viz_utils.py  display_utils.py  logger.py
src/valorant_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
